# binauralsensoryaugmentation

./: CMakeCache.txt  CMakeLists.txt  HISTORY.txt  I2CDevice.cpp  LICENCE.md  LSM303AGR_MAG.cpp  LSM303AGR_MAG.h  Makefile  PA1010D.cpp  PA1010D.h  README.md  SENSOR_MOUNT.stl  cmake_install.cmake  coordinates.csv  main  main.cpp  printMagnetometerOutput
include/: I2CDevice.h  LSM303AGR_MAG.h  PA1010D.h
lib/NMEAParser/NMEAParserBuild/: CMakeCache.txt  Makefile  cmake_install.cmake
lib/NMEAParser/NMEAParserBuild/NMEAParserLib/: Makefile  cmake_install.cmake
lib/NMEAParser/NMEAParserBuild/NMEAParserTest/: Makefile  NMEAParserTest  cmake_install.cmake
lib/NMEAParser/Software/NMEAParserLib/: NMEAParser.cpp  NMEASentenceGSV.cpp
src/: I2CDevice.cpp  LSM303AGR_MAG.cpp  PA1010D.cpp  main.cpp
